[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Objects/Circuit/VoltageSourceInvalid.png" type="Texture" id=2]
[ext_resource path="res://Resources/Objects/Circuit/VoltageSourceValid.png" type="Texture" id=3]
[ext_resource path="res://Resources/Puzzles/Chapter II/SourcesQuestions/VoltageSourceQuestions.gd" type="Script" id=4]

[node name="VoltageSourceQuestions" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Background" parent="." index="0"]
color = Color( 0.34902, 0.34902, 0.34902, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 50.7213
margin_top = 2.94036
margin_right = 267.721
margin_bottom = 33.9404
text = "Identify if circuit is valid or invalid
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 121.29
margin_top = 155.104
margin_right = 203.29
margin_bottom = 169.104
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Submit" type="Button" parent="." index="4"]
margin_left = 137.256
margin_top = 132.2
margin_right = 194.256
margin_bottom = 152.2
rect_scale = Vector2( 0.8, 0.8 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="5"]
position = Vector2( 240.606, 73.645 )
scale = Vector2( 0.252182, 0.252182 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="." index="6"]
position = Vector2( 78.345, 73.6449 )
scale = Vector2( 0.252, 0.252 )
texture = ExtResource( 2 )

[node name="Valid" type="LineEdit" parent="." index="7"]
margin_left = 218.525
margin_top = 130.96
margin_right = 276.525
margin_bottom = 154.96
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invalid" type="LineEdit" parent="." index="8"]
margin_left = 51.7265
margin_top = 130.96
margin_right = 109.727
margin_bottom = 154.96
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Submit" to="." method="_on_Submit_pressed"]
[connection signal="text_entered" from="Valid" to="." method="_on_Valid_text_entered"]
[connection signal="text_entered" from="Invalid" to="." method="_on_Invalid_text_entered"]
